WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135221
[iOS WK2] Header bar on nytimes articles lands in the wrong place after rubberbanding
https://bugs.webkit.org/show_bug.cgi?id=135221
Summary
[iOS WK2] Header bar on nytimes articles lands in the wrong place after rubbe...
Simon Fraser (smfr)
Reported
2014-07-23 17:02:05 PDT
Header bar on nytimes articles lands in the wrong place after rubberbanding
Attachments
Patch
(8.93 KB, patch)
2014-07-23 17:06 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2
(481.97 KB, application/zip)
2014-07-23 18:12 PDT
,
Build Bot
no flags
Details
Patch
(12.05 KB, patch)
2014-07-24 16:52 PDT
,
Simon Fraser (smfr)
benjamin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-07-23 17:06:20 PDT
Created
attachment 235392
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-07-23 17:06:59 PDT
<
rdar://problem/17542454
>
Simon Fraser (smfr)
Comment 3
2014-07-23 17:23:49 PDT
https://trac.webkit.org/r171498
Benjamin Poulain
Comment 4
2014-07-23 18:00:43 PDT
Comment on
attachment 235392
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=235392&action=review
> Source/WebKit2/UIProcess/mac/RemoteLayerTreeDrawingAreaProxy.mm:219 > +#if PLATFORM(IOS) > + m_webPageProxy->didCommitLayerTree(layerTreeTransaction); > +#endif > +
Uh, isn't that gonna bring all the scrolling bugs back? I think that's where the code was.
WebKit Commit Bot
Comment 5
2014-07-23 18:10:00 PDT
Re-opened since this is blocked by
bug 135223
Build Bot
Comment 6
2014-07-23 18:12:37 PDT
Comment on
attachment 235392
[details]
Patch
Attachment 235392
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/6390063927656448
New failing tests: media/track/add-and-remove-track.html
Build Bot
Comment 7
2014-07-23 18:12:41 PDT
Created
attachment 235398
[details]
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Simon Fraser (smfr)
Comment 8
2014-07-24 16:52:21 PDT
Created
attachment 235473
[details]
Patch
Benjamin Poulain
Comment 9
2014-07-24 17:10:58 PDT
Comment on
attachment 235473
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=235473&action=review
> Source/WebKit2/UIProcess/Scrolling/RemoteScrollingCoordinatorProxy.cpp:181 > + if (scrolledNodeID == rootScrollingNodeID() && m_requestedScrollInfo) { > + m_requestedScrollInfo->requestsScrollPositionUpdate = true; > + m_requestedScrollInfo->requestIsProgrammaticScroll = representsProgrammaticScroll; > + m_requestedScrollInfo->requestedScrollPosition = scrollPosition; > + }
ouch, that's not pretty.
Simon Fraser (smfr)
Comment 10
2014-07-24 17:25:27 PDT
https://trac.webkit.org/r171560
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug